# sysml-gen

./: .gitignore  CLAUDE.md  README.md  demo_model.json  后端工作流学习手册.md  后端零基础导读.md
backend/: .env.example  requirements.txt
backend/app/: database.py  main.py
backend/app/api/: admin.py  auth.py  documents.py  models.py  projects.py  templates.py
backend/app/core/: config.py  deps.py  project_access.py  security.py
backend/app/models/: __init__.py  document.py  log.py  model.py  project.py  project_member.py  template.py  user.py
backend/app/schemas/: document.py  log.py  model.py  project.py  template.py  user.py
backend/app/services/: __init__.py  format_validator.py  log_service.py  model_import_service.py  model_parser.py  parse_tasks.py
backend/scripts/: body_expand.py  demo_test.py  docx_style.py  extract_ref_doc.ps1  gen_test_cases_md.py  generate_merged_doc.py  generate_std_docs.py  merge_doc_signatures.py  seed_templates.py
database/: init.sql  my.ini  start-mysql.ps1
docs/: 后端完善验收报告.md  软件用户与测试合并文档.md
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App.vue  main.ts
frontend/src/api/: admin.ts  auth.ts  document.ts  (+4 more)
notebooks/: demo.ipynb  docgen_tutorial.ipynb
scripts/: demo-backend.ps1  demo-model.json  init-database.ps1  my.ini  setup-mysql.ps1  start-backend.bat  start-backend.ps1  start-mysql.bat
sdk/: pyproject.toml
sdk/src/sysmldocgen_mdk/: __init__.py  client.py  docgen.py  exceptions.py  jupyter.py  sync.py
模板/: 21－软件测试计划V1.1.md  22－软件测试说明V1.1.md  23－软件测试报告V1.1.md  5－软件用户手册V1.0.md
(+21 files in other folders)
